<resources>
    <string name="app_name">MovieApp</string>
    <string name="search">Search</string>
    <string name="trending">Trending</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="user_score">User Score</string>
    <string name="overview">Overview</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="movie_rating">%1$s%%</string>
    <string name="discover">Discover</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="for_you">For You</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="favourites">Favourites</string>
    <string name="movie">Movie</string>
    <string name="movie_favourite_selector">Movie favourite selector</string>
    <string name="clear_search_content_description">Clear search</string>
    <string name="movie_image">Movie image</string>
    <string name="cast_member">Cast member</string>
    <string name="tmdb_logo">The Movie Database Logo</string>
    <string name="navigate_back">Navigate back</string>
</resources>
