<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/home_foryou_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_whatsnew_text_margin_top"
            android:layout_marginEnd="@dimen/home_foryou_margin_end"
            android:layout_marginStart="@dimen/home_foryou_margin_start"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/for_you"
            android:textColor="@color/dark_blue_primary"
            android:textSize="@dimen/home_whatsnew_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/home_foryou_tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_tab_margin_top"
            app:layout_constraintStart_toStartOf="@id/home_foryou_text"
            app:layout_constraintTop_toBottomOf="@id/home_foryou_text"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/dark_blue_primary"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/dark_blue_primary"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/gray">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_for_you_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_rv_margin_top"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_foryou_tabs"
            app:layout_constraintTop_toBottomOf="@id/home_foryou_tabs" />

        <TextView
            android:id="@+id/home_discover_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_text_margin_top"
            android:layout_marginEnd="@dimen/home_text_margin_end"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/discover"
            android:textColor="@color/dark_blue_primary"
            android:textSize="@dimen/home_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_for_you_movies"
            app:layout_constraintTop_toBottomOf="@id/home_for_you_movies" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/home_discover_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_tab_margin_top"
            android:layout_marginEnd="@dimen/home_tab_margin_end"
            app:layout_constraintStart_toStartOf="@id/home_discover_text"
            app:layout_constraintTop_toBottomOf="@id/home_discover_text"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/dark_blue_primary"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/dark_blue_primary"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/gray">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_discover_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_rv_margin_top"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_discover_tabs"
            app:layout_constraintTop_toBottomOf="@id/home_discover_tabs" />

        <TextView
            android:id="@+id/home_trending_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_text_margin_top"
            android:layout_marginEnd="@dimen/home_text_margin_end"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/trending"
            android:textColor="@color/dark_blue_primary"
            android:textSize="@dimen/home_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_discover_movies"
            app:layout_constraintTop_toBottomOf="@id/home_discover_movies" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/home_trending_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_tab_margin_top"
            android:layout_marginEnd="@dimen/home_tab_margin_end"
            app:layout_constraintStart_toStartOf="@id/home_trending_text"
            app:layout_constraintTop_toBottomOf="@id/home_trending_text"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/dark_blue_primary"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/dark_blue_primary"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/gray">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_week" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_trending_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_rv_margin_top"
            android:layout_marginBottom="@dimen/rv_margin_bottom"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_trending_tabs"
            app:layout_constraintTop_toBottomOf="@id/home_trending_tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
